# rpp-editor

./: .flake8  .gitignore  CHANGELOG.md  README.md  activate-env.ps1  main.py  pyproject.toml  pytest.ini  requirements.txt  rpp_editor_gui.py  rpp_parser.py  run_gui.py  setup.py  test1.rpp  test2.rpp  test2.rpp-bak
.github/workflows/: python-app.yml
examples/: test1.rpp  test2.rpp  test3.rpp
src/rpp_editor/: __init__.py  gui.py  parser.py
tests/: conftest.py  test_gui.py  test_integration.py  test_parser.py
